Use `Integer.valueOf`
The `new Integer(x)` got deprecated, for good reasons.