@@ -1,5 +1,5 @@
 /*
-  Copyright (C) 2008-2009 Helge Hess
+  Copyright (C) 2008-2024 Helge Hess
 
   This file is part of OpenGroupware.org (OGo)
 
@@ -488,7 +488,8 @@ public class OGoLoginModule extends EODatabaseLoginModule {
     logEntry.put("session_log_id", pkey);
     logEntry.put("log_date",       new Date());
     logEntry.put("action",         _action);
-    logEntry.put("account_id", _loginId != null ? _loginId : new Integer(0));
+    logEntry.put("account_id", 
+                 _loginId != null ? _loginId : Integer.valueOf(0));
     if (!adaptor.insertRow("session_log", logEntry))
       log.fatal("could not log entry in session_log table!");
   }
